# libhal-arm-mcu

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  conanfile.py  create.sh  iterate.sh  max_blink.sal
.github/workflows/: ci.yml  demos_test.yml  deploy.yml  deploy_with_cache.yml  library_test.yml  take.yml
demos/: CMakeLists.txt  awaitable.hpp  conanfile.py  flash.sh  intrusive_ptr.hpp  main.cpp  pointers.hpp  resource_list.hpp  run.sh  smart_ptr.hpp  smart_ref.hpp  task.hpp  toggle-measurement.md  usb_log.txt
demos/applications/: adc.cpp  blank.cpp  blinker.cpp  can.cpp  dac.cpp  descriptors.hpp  enumerator.hpp  gpio.cpp  hid.cpp  hid_nunchuck.cpp  i2c.cpp  independent_watchdog.cpp  interrupt_pin.cpp  max_blink.cpp  oled.cpp  pwm.cpp  pwm16.cpp  semihost.cpp  spi.cpp  stm32f103c8-usb.cpp  stream_dac.cpp  test.cpp  timer.cpp  uart.cpp  usb.cpp  usb_cdc.cpp  usb_cdc_raw.cpp  usb_interface_testing.cpp  utils.hpp  watchdog.cpp  zero_copy_serial.cpp
demos/applications/resources/: uniq-BOMBORA.u8.pcm.h  uniq-BOMBORA.u8.pcm.hpp
demos/captures/: release-coroutine-vs-others.sal  release-coroutine.sal
docs/: conf.py  doxygen.conf  index.rst
docs/cortex_m/: dwt_counter.md  index.rst  interrupt.md  startup.md  system_control.md  systick_timer.md
docs/lpc40/: adc.md  can.md  clock.md  constants.md  dac.md  dma.md  dma_spi.md  i2c.md  index.rst  input_pin.md  interrupt.md  interrupt_pin.md  output_pin.md  pin.md  power.md  pwm.md  spi.md  stream_dac.md  uart.md
docs/stm32_generic/: i2c.md  index.rst  pwm.md  quadrature_encoder.md  spi.md  timer.md  uart.md
docs/stm32f1/: adc.md  can.md  can2.md  clock.md  constants.md  dma.md  gpio.md  independent_watchdog.md  index.rst  input_pin.md  interrupt.md  output_pin.md  pin.md  pwm.md  spi.md  timer.md  uart.md  usart.md  usb.md
docs/stm32f40/: constants.md  index.rst
docs/stm32f411/: clock.md  constants.md  dma.md  i2c.md  index.rst  input_pin.md  interrupt.md  output_pin.md  pin.md  spi.md  uart.md
include/libhal-arm-mcu/: dwt_counter.hpp  interrupt.hpp  startup.hpp  system_control.hpp  systick_timer.hpp  watchdog.hpp
include/libhal-armcortex/: dwt_counter.hpp  interrupt.hpp  startup.hpp  system_control.hpp  systick_timer.hpp
include/libhal-exceptions/: control.hpp
include/libhal-lpc40/: adc.hpp  can.hpp  clock.hpp  constants.hpp  dac.hpp  dma.hpp  i2c.hpp  input_pin.hpp  interrupt.hpp  interrupt_pin.hpp  output_pin.hpp  pin.hpp  power.hpp  pwm.hpp  spi.hpp  stream_dac.hpp  uart.hpp
include/libhal-stm32f1/: adc.hpp  can.hpp  clock.hpp  constants.hpp  dma.hpp  input_pin.hpp  interrupt.hpp  output_pin.hpp  pin.hpp  pwm.hpp  timer1_pwm.hpp  uart.hpp
linker_scripts/: lpc4072.ld  lpc4074.ld  lpc4076.ld  lpc4088.ld  picolibc_gcc.ld  picolibc_llvm.ld  standard.ld  stm32f10xx4.ld  stm32f10xx6.ld  stm32f10xx8.ld  stm32f10xxb.ld  stm32f10xxc.ld  stm32f10xxd.ld  stm32f10xxe.ld  stm32f10xxf.ld  stm32f10xxg.ld  stm32f411re.ld
src/: dwt_counter.cpp  dwt_counter_reg.hpp  interrupt.cpp  interrupt_reg.hpp  system_controller.cpp  system_controller_reg.hpp  systick_timer.cpp  systick_timer_reg.hpp  tca9548a.cpp  terminate_handler.cpp
src/lpc40/: adc.cpp  adc_reg.hpp  can.cpp  can_reg.hpp  clock.cpp  dac.cpp  dac_reg.hpp  dma.cpp  dma_spi.cpp  gpio_reg.hpp  i2c.cpp  i2c_reg.hpp  input_pin.cpp  interrupt.cpp  interrupt_pin.cpp  interrupt_pin_reg.hpp  output_pin.cpp  pin.cpp  pin_reg.hpp  power.cpp  pwm.cpp  pwm_reg.hpp  spi.cpp  spi_reg.hpp  stream_dac.cpp  system_controller_reg.hpp  uart.cpp  uart_clock.hpp  uart_reg.hpp
src/rp/: adc.cpp  gpio.cpp  i2c.cpp  pwm.cpp  serial.cpp  spi.cpp  time.cpp
src/rp_generic/: gpio.cpp  serial.cpp
src/stm32_generic/: i2c.cpp  pwm.cpp  quadrature_encoder.cpp  spi.cpp  timer.cpp  timer.hpp  uart.cpp
src/stm32f1/: adc.cpp  adc_reg.hpp  can.cpp  can2.cpp  can_reg.hpp  clock.cpp  dma.hpp  flash_reg.hpp  general_purpose_timer.cpp  gpio.cpp  independent_watchdog.cpp  input_pin.cpp  interrupt.cpp  output_pin.cpp  pin.cpp  pin.hpp  power.cpp  power.hpp  pwm.cpp  pwm_reg.hpp  pwm_wrapper.cpp  quadrature_encoder.cpp  quadrature_encoder.hpp  rcc_reg.hpp  spi.cpp  timer.cpp  timer1_pwm.cpp  uart.cpp  uart_reg.hpp  usart.cpp  usart_reg.hpp  usb.cpp  watchdog.cpp
src/stm32f40/: output_pin.cpp
src/stm32f411/: adc_reg.hpp  clock.cpp  dma.cpp  dma.hpp  dma_reg.hpp  flash_reg.hpp  gpio_reg.hpp  i2c.cpp  input_pin.cpp  interrupt.cpp  output_pin.cpp  pin.cpp  power.cpp  power.hpp  rcc_reg.hpp  spi.cpp  spi_reg.hpp  uart.cpp
test_package/: CMakeLists.txt  conanfile.py  linker.ld  main.cpp
tests/: dwt_counter.test.cpp  helper.hpp  interrupt.test.cpp  main.test.cpp  systick_timer.test.cpp
v2/: CMakeLists.txt  README.md  conanfile.py
v2/modules/: analog.cppm  arm-mcu.cppm
v2/modules/cortex_m/: startup.hpp  systick_timer.hpp
v2/test_package/: CMakeLists.txt  conanfile.py  main.cpp
v2/tests/: adc.test.cpp  can.test.cpp  containers.test.cpp  i2c.test.cpp  interrupts.test.cpp  scatter_span.test.cpp  sensors.test.cpp  serial.test.cpp  spi.test.cpp
(+208 files in other folders)
